--- a/hashring simulation.ipynb
+++ b/hashring simulation.ipynb
@@ -11,6 +11,7 @@
     "- Add 1000 keys to the hash ring.\n",
     "- Visualize the distribution of keys among nodes.\n",
     "- Add one node and observe the distribution:\n",
+    "- Add weights to each ball and observe the distribution:\n",
     "\n",
     "2- Add one more node to the hash ring.\n",
     "- Visualize the distribution of keys among nodes after adding the new node.\n",
